Sugati/src/objects/Car_Hire__c.object
<CustomObject>
    <fields>
        <fullName>CH_API_Feed_URL__c</fullName>
        <label>API Feed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CH_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Additional_Driver__c</fullName>
        <label>Additional Driver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_After_Hours_times_charges__c</fullName>
        <label>After Hours (times &amp; charges)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Aircon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aircon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Airport__c</fullName>
        <label>Airport</label>
        <picklist>
            <picklistValues>
                <fullName>Heraklion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palma (Mallorca)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaga</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Baby_Seat__c</fullName>
        <label>Baby Seat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Check_on_Affordable_Car_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check on Affordable Car Hire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Child_Seat__c</fullName>
        <label>Child Seat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Comm_Margin_P__c</fullName>
        <formula>(CH_Sell__c -  CH_Cost__c) / CH_Sell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm (Margin %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CH_Comm_Margin__c</fullName>
        <formula>CH_Sell__c -  CH_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comm (Margin)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Conf_From_Date__c</fullName>
        <label>Conf From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Conf_To_Date__c</fullName>
        <label>Conf To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CH_Divisor_7__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Divisor for less than 7 days bookings</inlineHelpText>
        <label>Divisor &lt; 7</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Driver_Age_Max__c</fullName>
        <label>Driver Age (Max)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Driver_Age_Min__c</fullName>
        <label>Driver Age (Min)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Free_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Fuel_Policy__c</fullName>
        <label>Fuel Policy</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Has_A_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has A/C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Insurance_Excess__c</fullName>
        <label>Insurance Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Insurance_Waiver__c</fullName>
        <label>Insurance Waiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_No_Doors__c</fullName>
        <label>No. Doors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_No_Seats__c</fullName>
        <label>No. Seats</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_On_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_One_way_charge__c</fullName>
        <label>One way charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Pro_Rata_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pro Rata Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Public_Rate__c</fullName>
        <label>Public Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SSIP_Code__c</fullName>
        <label>SSIP Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Sell__c</fullName>
        <label>Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CH_Service_From_Date__c</fullName>
        <label>Service From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Service_To_Date__c</fullName>
        <label>Service To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Car Hire</relationshipLabel>
        <relationshipName>Car_Hire</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CH_Transmission__c</fullName>
        <label>Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CH_Type_of_Vehicle_or_similar__c</fullName>
        <label>Type of Vehicle (or similar)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Web_Description__c</fullName>
        <label>Web Description</label>
        <type>TextArea</type>
    </fields>
    <label>Car Hire</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_Supplier__c</columns>
        <columns>CH_Group__c</columns>
        <columns>CH_SSIP_Code__c</columns>
        <columns>CH_Conf_From_Date__c</columns>
        <columns>CH_Conf_To_Date__c</columns>
        <columns>CH_Service_From_Date__c</columns>
        <columns>CH_Service_To_Date__c</columns>
        <columns>CH_Transmission__c</columns>
        <columns>CH_No_Doors__c</columns>
        <columns>CH_No_Seats__c</columns>
        <columns>CH_Insurance_Excess__c</columns>
        <columns>CH_Has_A_C__c</columns>
        <columns>CH_Free_Sales__c</columns>
        <columns>CH_On_Sale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Click_Rent</fullName>
        <columns>NAME</columns>
        <columns>CH_Airport__c</columns>
        <columns>CH_Group__c</columns>
        <columns>CH_Type_of_Vehicle_or_similar__c</columns>
        <columns>CH_Conf_From_Date__c</columns>
        <columns>CH_Service_From_Date__c</columns>
        <columns>CH_Cost__c</columns>
        <columns>CH_Sell__c</columns>
        <columns>CH_Comm_Margin_P__c</columns>
        <columns>CH_Free_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CH_Supplier__c</field>
            <operation>contains</operation>
            <value>Click</value>
        </filters>
        <label>Click &amp; Rent</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000000000}</displayFormat>
        <label>Car Hire ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Hire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>